--- a/mobile.css
+++ b/mobile.css
@@ -3,6 +3,14 @@
     height: 100%;
 }
 
+html {
+    background: url(sunny.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 body {
     font-family: "Sansita", cursive;
     max-width: auto;
