--- a/mobile.css
+++ b/mobile.css
@@ -3,18 +3,18 @@
     height: 100%;
 }
 
+main {
+    margin-bottom: 500px;
+}
+
 html {
     background: url(sunny.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
     height: 100%;
 }
 
 body {
     font-family: "Sansita", sans-serif;
-    max-width: auto;
     text-align: center;
 }
 
@@ -44,6 +44,25 @@ body {
     margin-top: -5px;
 }
 
+#hour,
+#hours,
+#hourss {
+    display: inline-block;
+    width: 15%;
+    margin: auto;
+    margin-bottom: 10px;
+    border-style: solid;
+    border-width: 3px;
+}
+
+#hours {
+    margin-bottom: 5px;
+}
+
+#hourss {
+    margin-top: 5px;
+}
+
 option {
     font-family: "Sansita", cursive;
     align-content: center;
@@ -56,21 +75,108 @@ option {
     width: 100px;
 }
 
+#wind {
+    margin: auto;
+    max-width: 250px;
+    color: black;
+    margin-top: -10px;
+    line-height: 25px;
+    background-color: #efefef;
+}
+
 #current {
     margin: auto;
-    max-width: 300px;
+    max-width: 350px;
     color: black;
     margin-top: -35px;
     background-color: #efefef;
 }
 
-footer {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 1rem;
+#hourly {
+    margin: auto;
+    max-width: 500px;
+    color: black;
+    margin-top: -10px;
     background-color: #efefef;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #efefef;
+}
+
+#foot {
+    margin-top: 20px;
     text-align: center;
-    opacity: .5;
+}
+
+#hourly {
+    margin: auto;
+    max-width: 550px;
+    color: black;
+    margin-top: -10px;
+    background-color: #efefef;
+}
+
+@media (min-width: 1000px) {
+    #hourly {
+        margin: auto;
+        max-width: 550px;
+        color: black;
+        margin-top: 25px;
+        background-color: #efefef;
+    }
+    #wind {
+        margin: auto;
+        max-width: 250px;
+        color: black;
+        margin-top: 20px;
+        line-height: 25px;
+        background-color: #efefef;
+    }
+    #current {
+        margin: auto;
+        max-width: 350px;
+        color: black;
+        margin-top: -35px;
+        background-color: #efefef;
+    }
+    main {
+        margin-bottom: 75px;
+    }
+}
+
+@media (max-width: 999px) {
+    #hourly {
+        display: none;
+    }
+    main {
+        margin-bottom: 75px;
+    }
+    #wind {
+        margin: auto;
+        max-width: 150px;
+        color: black;
+        margin-top: 50px;
+        line-height: 25px;
+        background-color: #efefef;
+    }
+    #current {
+        margin: auto;
+        max-width: 250px;
+        color: black;
+        margin-top: -20px;
+        background-color: #efefef;
+    }
+    #hi,
+    #lo {
+        display: inline-block;
+        width: 25%;
+        margin-top: -5px;
+    }
 }
