--- a/mobile.css
+++ b/mobile.css
@@ -3,6 +3,69 @@
     height: 100%;
 }
 
+#flexbox {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 300px;
+    height: auto;
+    min-height: 200px;
+    color: white;
+    align-items: center;
+    align-content: center;
+    margin: auto;
+    max-width: 500px;
+    margin-top: 10px;
+    margin-bottom: -10px;
+}
+
+#flexbox .box {
+    flex: 100px 2;
+    background-color: #efefef;
+    border-style: solid;
+    border-width: 2px;
+    color: black;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 25px;
+}
+
+#weatherflexbox {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+    min-height: 50px;
+    color: white;
+    align-items: center;
+    align-content: center;
+    margin: auto;
+    max-width: 350px;
+    color: black;
+    margin-bottom: 10px;
+}
+
+#weatherflexbox .fbox {
+    flex: 100px 2;
+    background-color: #efefef;
+    border-style: solid;
+    border-width: 2px;
+    color: black;
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 25px;
+}
+
 main {
     margin-bottom: 500px;
 }
@@ -44,9 +107,9 @@ body {
     margin-top: -5px;
 }
 
-#hour,
-#hours,
-#hourss {
+.hour,
+.hours,
+.hourss {
     display: inline-block;
     width: 15%;
     margin: auto;
@@ -55,11 +118,11 @@ body {
     border-width: 3px;
 }
 
-#hours {
+.hours {
     margin-bottom: 5px;
 }
 
-#hourss {
+.hourss {
     margin-top: 5px;
 }
 
@@ -115,15 +178,7 @@ footer {
     text-align: center;
 }
 
-#hourly {
-    margin: auto;
-    max-width: 550px;
-    color: black;
-    margin-top: -10px;
-    background-color: #efefef;
-}
-
-@media (min-width: 1000px) {
+@media (min-width: 751px) {
     #hourly {
         margin: auto;
         max-width: 550px;
@@ -151,18 +206,23 @@ footer {
     }
 }
 
-@media (max-width: 999px) {
-    #hourly {
-        display: none;
+@media (max-width: 750px) {
+    #weatherflexbox .fbox {
+        max-width: 250px;
+    }
+    #flexbox .box {
+        flex: 150px 1;
+        max-width: 250px;
     }
     main {
         margin-bottom: 75px;
+        width: 100%
     }
     #wind {
         margin: auto;
         max-width: 150px;
         color: black;
-        margin-top: 50px;
+        margin-top: 30px;
         line-height: 25px;
         background-color: #efefef;
     }
