--- a/baseball/base.css
+++ b/baseball/base.css
@@ -49,7 +49,16 @@ body {
 
 #royals {
     background: url(smallplease2.png);
-    background-size: 500px 500px;
+    background-size: 300px 300px;
+}
+
+#mets {
+    background: url(metslogo.png);
+}
+
+#giants {
+    background: url(giantslogo.gif);
+    background-size: 352px 187px
 }
 
 .page-nav {
@@ -204,6 +213,57 @@ p {
     margin-bottom: 5px
 }
 
+#flexbox3 {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    height: auto;
+    min-height: 100px;
+    color: white;
+    align-items: center;
+    align-content: center;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: -10px;
+    vertical-align: middle;
+}
+
+#flexbox3 .box {
+    display: flex;
+    flex: auto;
+    vertical-align: middle;
+    background-color: #efefef;
+    border-style: solid;
+    border-width: 2px;
+    color: black;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    text-align: center;
+    line-height: 25px;
+}
+
+#flexbox3 .big {
+    background-color: #efefef;
+    border-style: solid;
+    border-width: 2px;
+    color: black;
+    width: 500px;
+    height: 50px;
+    max-width: 500px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    text-align: center;
+    line-height: 0px;
+    margin: auto;
+    width: 85%;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 5px
+}
+
 @media (max-width: 800px) {
     #flexbox #r9 {
         margin: auto;
@@ -233,8 +293,12 @@ p {
         margin-bottom: 5px;
         margin-right: 5px;
     }
+    .big {
+        font-size: 15px;
+    }
     p {
         margin-left: 30px;
+        margin-top: 3px;
     }
     #flexbox2 .box {
         flex: 150px 2;
