finished json and pictures

--- a/base.css
+++ b/base.css
@@ -110,7 +110,7 @@ p {
 }
 
 .big {
-    background-color: #efefef;
+    background-color: white;
     border-style: solid;
     border-width: 2px;
     color: black;
@@ -148,7 +148,7 @@ p {
     display: flex;
     flex: auto;
     vertical-align: middle;
-    background-color: #efefef;
+    background-color: white;
     border-style: solid;
     border-width: 2px;
     color: black;
@@ -181,7 +181,7 @@ p {
     display: flex;
     flex: auto;
     vertical-align: middle;
-    background-color: #efefef;
+    background-color: white;
     border-style: solid;
     border-width: 2px;
     color: black;
@@ -195,7 +195,7 @@ p {
 }
 
 #flexbox2 .big {
-    background-color: #efefef;
+    background-color: white;
     border-style: solid;
     border-width: 2px;
     color: black;
