--- a/base.css
+++ b/base.css
@@ -4,7 +4,7 @@
 }
 
 .page-header {
-    background-image: url(stadiump.jpg);
+    background-image: url(stadiumm.jpg);
     width: 100%;
     background-repeat: no-repeat;
 }
@@ -44,11 +44,11 @@ p {
 body {
     font-family: "Sansita", sans-serif;
     text-align: center;
-    background-color: white;
+    background-color: black;
 }
 
 #royals {
-    background: url(smallplease2.png);
+    background: url(royalsback.jpg);
     background-size: 300px 300px;
 }
 
@@ -213,6 +213,10 @@ p {
     margin-bottom: 5px
 }
 
+#index {
+    background-color: white;
+}
+
 #flexbox3 {
     display: flex;
     flex-wrap: wrap;
@@ -268,6 +272,11 @@ p {
     #flexbox #r9 {
         margin: auto;
     }
+    .page-header {
+        background-image: url(stadiuml.jpg);
+        width: 100%;
+        background-repeat: no-repeat;
+    }
     p {
         margin-left: 15px;
     }
@@ -285,7 +294,12 @@ p {
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
+    .page-header {
+        background-image: url(stadiump.jpg);
+        width: 100%;
+        background-repeat: no-repeat;
+    }
     #flexbox .box {
         flex: 150px 2;
         max-width: 250px;
