--- a/base.css
+++ b/base.css
@@ -9,6 +9,16 @@
     background-repeat: no-repeat;
 }
 
+footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #efefef;
+}
+
 header {
     position: absolute;
     left: 0;
@@ -45,6 +55,7 @@ body {
     font-family: "Sansita", sans-serif;
     text-align: center;
     background-color: black;
+    height: 1200px;
 }
 
 #royals {
