--- a/base.css
+++ b/base.css
@@ -9,6 +9,10 @@
     background-repeat: no-repeat;
 }
 
+#index {
+    height: 400px;
+}
+
 footer {
     position: fixed;
     bottom: 0;
@@ -17,6 +21,10 @@ footer {
     width: 100%;
     height: 60px;
     background-color: #efefef;
+}
+
+#plan {
+    height: 1800px;
 }
 
 header {
@@ -54,7 +62,6 @@ p {
 body {
     font-family: "Sansita", sans-serif;
     text-align: center;
-    background-color: black;
     height: 1200px;
 }
 
@@ -112,6 +119,12 @@ body {
     display: none;
     width: 100%;
     text-align: center;
+}
+
+.center {
+    width: 100%;
+    text-align: center;
+    margin-top: 15px;
 }
 
 p {
@@ -224,16 +237,13 @@ p {
     margin-bottom: 5px
 }
 
-#index {
-    background-color: white;
-}
-
 #flexbox3 {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     max-width: 1000px;
     height: auto;
-    min-height: 100px;
+    min-height: 200px;
     color: white;
     align-items: center;
     align-content: center;
@@ -247,7 +257,7 @@ p {
     display: flex;
     flex: auto;
     vertical-align: middle;
-    background-color: #efefef;
+    background-color: white;
     border-style: solid;
     border-width: 2px;
     color: black;
@@ -261,7 +271,7 @@ p {
 }
 
 #flexbox3 .big {
-    background-color: #efefef;
+    background-color: white;
     border-style: solid;
     border-width: 2px;
     color: black;
